--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="cp_navi">
         <ul>
-            <li><a href="https://youtuber-moti.f5.si">Home</a></li>
+            <li><a href="https://moti-youtuber.f5.si">Home</a></li>
             <li>
                 <a href="https://www.youtube.com/@moti_100moku">Products</a>
             </li>
